fix: stretched hand images in rules modal index.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -162,7 +162,7 @@ button.btn.btn-primary.home-button:focus {
 
 .rules-img {
     width: 49%;
-    max-width: 153px;
+    max-width: 120px;
 	height: 56px;
 	display: inline-block;
 }
